--- a/GamingMice Original/assets/css/style.css
+++ b/GamingMice Original/assets/css/style.css
@@ -67,7 +67,7 @@ ul li {
     line-height: 1.5em;
 }
 
-header {
+.header {
     background: linear-gradient(135deg, rgb(1, 7, 8), rgb(17, 45, 50)); /* Переход от темного к более светлому */
     height: 177px;
     font-size: 0.8em;
@@ -78,7 +78,7 @@ header {
 }
 
 
-.main, .logo, .menubar, .site_content, footer {
+.main, .logo, .menubar, .site_content, .footer {
     margin-left: auto;
     margin-right: auto;
 }
@@ -168,7 +168,7 @@ hr {
 
 .btn {
     padding: 10px 20px; /* Пространство внутри кнопки */
-    background: linear-gradient(135deg, #e0e0e0, #e0e0e0); /* Светлый градиент */
+    background: linear-gradient(135deg, #ffffff, #e0e0e0); /* Светлый градиент */
     border: 1px solid #cccccc; /* Легкая рамка */
     border-radius: 25px; /* Закругленные углы */
     cursor: pointer;
@@ -366,7 +366,7 @@ td {
 }
 
 td img {
-    width: 153px;
+    width: 60px;
     vertical-align: middle;
 }
 
@@ -378,7 +378,7 @@ td img {
     font-weight: bold;
 }
 
-footer {
+.footer {
     width: 100%;
     height: 100px;
     padding: 28px 0 5px 0;
@@ -390,17 +390,17 @@ footer {
     min-width: 900px;
 }
 
-footer a {
+.footer a {
     color: #a8aa94;
     text-decoration: none;
 }
 
-footer a:hover {
+.footer a:hover {
     color: whitesmoke;
     text-decoration: none;
 }
 
-footer p {
+.footer p {
     padding: 0 0 10px;
 }
 
@@ -485,177 +485,3 @@ footer p {
 .send_contact input[type="submit"]:hover {
     background-color: #5b549a;
 }
-
-
-/* CSS Mobile */
-
-@media only screen
-and (min-device-width : 320px)
-and (max-device-width : 568px) {
-
-    header {
-        background: linear-gradient(135deg, rgb(0, 0, 0), rgb(235, 215, 255));
-        min-width: 100%;
-        height: 20%;
-        text-align: center;
-    }
-
-    .logo {
-        width: 100%;
-    }
-
-    td {
-        font-size: 100%;
-        padding: 50px;
-    }
-
-    .site_content {
-        width: 100%;
-    }
-
-    .menubar {
-        width: 100%;
-        height: 100%;
-    }
-
-    .content {
-        width: 100%;
-        text-align: center;
-    }
-    
-    .site_content {
-        width: 100%;
-        text-align: center;
-    }
-    
-    .sidebar_container {
-        display: none;
-    }
-    
-    footer {
-        display: none;
-    }
-    
-    ul.menu {
-        float: none;
-    }
-    
-    ul.menu li {
-        margin: 0;
-        padding: 0;
-        float: none;
-    }
-    
-    .logo h1 {
-        font: normal 235% 'century gothic', arial, sans-serif;
-    }
-    
-    .logo h2 {
-        font: normal 100% 'century gothic', arial, sans-serif;
-        color: white;
-    }
-    
-    .content h1, h2 {
-        font: normal 110% 'century gothic', arial;
-    }
-    
-    .mouse_block img {
-        width: 43%;
-    }
-
-    .posts_content p { 
-        line-height: 1.5em; 
-        padding: 3%;
-        text-align: left;
-    }
-    
-    .posts p {
-        font-size: 120%;
-    }
-    
-    /* fimls page */
-    
-    .info_film {
-        float: none;
-        height: 100%;
-    }
-    
-    .info_film img { 
-        margin-bottom: 5%;
-    }
-    
-    .button {
-        float: none;
-    }
-
-    /* rating page */
-    table {
-        width: 100%;
-        border-collapse: collapse; /* Ensure borders are collapsed */
-    }
-        
-    }
-
-    th {
-        font-size: 75%;
-    }
-
-    td {
-        font-size: 100%;
-        
-    }
-
-    td img {
-        width: 200px;
-    }
-
-    /* show page */
-    iframe {
-        width: 88%;
-        height: 100%;
-    }
-
-    .descriptions_film {
-        width: 90%;
-        text-align: left; 
-        margin-left: 2%;
-    }
-    
-    .descriptions_film img {
-        float: none;
-        width: 73%;
-        display: block;
-        margin: 0;
-        padding: 0;
-        margin-left: 11%;
-        margin-bottom: 7%;
-    }
-    
-    .reviews {
-        text-align: left;
-        width: 96%;
-    }
-    
-    .send input[type="text"] {
-        width: 80%;
-    }
-
-    .send input[type="text"] {
-        width: 830px;
-    }
-
-    .send textarea {
-        width: 85%;
-        
-    }
-    input, textarea {
-        outline: 1;
-        padding: 10px;
-        margin-bottom: 10px;
-        border: 1px solid #ddd;
-        border-radius: 5px;
-        box-sizing: border-box;
-        width: 830px;
-    }
-    
-
